add entity Menu and crud for Menu
